src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__commands__tests__draw_blocks_commands_none.snap
---
source: src/core/status/ui/draw_blocks/commands.rs
expression: setup.terminal.backend()
---
"╭──────────╮"
"│          │"
"│          │"
"│          │"
"│          │"
"╰──────────╯"
